--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-">
+    <h1>Test</h1>
     <%= yield %>
   </body>
 </html>
