--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,68 @@
-<h2>Sign up</h2>
+<% content_for(:page_title, "Sign up") %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div>
+  <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Workflow">
+  <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+    Create new account
+  </h2>
+  <p class="mt-2 text-center text-sm text-gray-600">
+    Or
+    <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">
+      start your 14-day free trial
+    </a>
+  </p>
+</div>
+<%= form_for(resource,
+             as: resource_name,
+             url: registration_path(resource_name)) do |f| %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="mt-8 space-y-6">
+    <%= render "devise/shared/error_messages",
+               resource: resource %>
+
+    <div class="rounded-md shadow-sm -space-y-px">
+      <% @input = 'appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm' %>
+      <div style="height: 68px"> <!--class="w-full md:w-1/2 px-3 mb-4 md:mb-0"-->
+        <%= f.label :first_name, class: 'sr-only' %>
+        <%= f.text_field :first_name, autofocus: true, required: true, placeholder: 'First Name', class: @input %>
+      </div>
+
+      <div style="height: 68px">
+        <%= f.label :last_name, class: 'sr-only' %>
+        <%= f.text_field :last_name, placeholder: 'Last Name', class: @input %>
+      </div>
+
+      <div style="height: 68px">
+        <%= f.label :username, class: 'sr-only' %>
+        <%= f.text_field :username, required: true, placeholder: 'Username', class: @input %>
+      </div>
+
+      <div style="height: 68px">
+        <%= f.label :email, class: 'sr-only' %>
+        <%= f.email_field :email, required: true, placeholder: 'Email address', class: @input %>
+      </div>
+
+      <div style="height: 68px">
+        <%= f.label :password, class: 'sr-only'%>
+        <%= f.password_field :password, required: true, placeholder: 'Password', class: @input %>
+      </div>
+
+      <div style="height: 68px">
+        <%= f.label :password_confirmation, class: 'sr-only' %>
+        <%= f.password_field :password_confirmation, required: true, placeholder: 'Password Confirmation', class: @input %>
+      </div>
+    </div>
+    <div>
+      <%= f.submit "Sign up", class: "group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="text-center">
+  <p class="text-grey-500 text-sm">
+    Have an account?
+    <%= link_to "Sign in", new_user_session_path, class: 'font-medium text-indigo-600 hover:text-indigo-500' %>.
+  </p>
+</div>
+
