--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,25 @@
-<h2>Forgot your password?</h2>
-
+<div>
+  <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Workflow">
+  <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+    Forgot your password?
+  </h2>
+  <p class="mt-2 text-center text-sm text-gray-600">
+    Please enter your email address and we will send an instruction on how to reset your password
+  </p>
+</div>
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <div class="mt-8 space-y-6">
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="rounded-md shadow-sm -space-y-px">
+      <%= f.label :login, "Username / Email", class: 'sr-only' %><br />
+      <%= f.text_field :login, autofocus: true, class: 'appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm', placeholder: 'Username or Email' %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <div>
+      <%= f.submit "Send me instructions", class: 'group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
+    </div>
   </div>
 <% end %>
-
+<hr>
 <%= render "devise/shared/links" %>
