--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'tailwind'%>
     <%= stylesheet_link_tag 'inter-font' %>
+
+    <%= evil_icons_sprite %>
   </head>
 
   <body>
