UPDATE PROFILE SETTING + FIX NAVBAR

--- a/app/views/layouts/shared/_navigation.html.erb
+++ b/app/views/layouts/shared/_navigation.html.erb
@@ -76,10 +76,18 @@
           -->
           <div data-menu-target="toggleable" class="origin-top-right absolute hidden right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
             <!-- Active: "bg-gray-100", Not Active: "" -->
-            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
-            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
-            <%= link_to destroy_user_session_path, method: :delete do %>
-              <p class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</p>
+            <% if user_signed_in? %>
+              <%= link_to edit_user_registration_path, method: :get do %>
+                <p class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-300" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</p>
+              <% end %>
+              <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-300" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
+              <%= link_to destroy_user_session_path, method: :delete do %>
+                <p class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-300" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</p>
+              <% end %>
+            <% else %>
+              <%= link_to new_user_session_path, method: :get do %>
+                <p class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-300" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign in</p>
+              <% end %>
             <% end %>
           </div>
         </div>
