--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,161 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<% content_for(:page_title, "Edit Profile") %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <div class="md:grid md:grid-cols-3 md:gap-6">
+    <div class="px-4 sm:px-0">
+      <h3 class="text-lg font-medium leading-6 text-gray-900">Profile</h3>
+      <p class="mt-1 text-sm text-gray-600">
+        This information will be displayed publicly so be careful what you share.
+      </p>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="mt-5 md:mt-0 md:col-span-2">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="shadow sm:rounded-md sm:overflow-hidden">
+          <div class="px-4 py-5 bg-white space-y-6 sm:p-6">
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+<!--            <div class="grid grid-cols-3 gap-6">-->
+<!--              <div class="col-span-3 sm:col-span-2">-->
+<!--                <%#= f.label :email, class: 'block text-sm font-medium text-gray-700' %><br />-->
+<!--                <div class="mt-1 flex rounded-md shadow-sm">-->
+<!--                   <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 text-sm">-->
+<!--                    email:-->
+<!--                  </span>-->
+                  <%#= f.email_field :email, autofocus: true, autocomplete: "email", class: 'focus:ring-indigo-500 focus:border-indigo-500 flex-1 block w-full rounded-none rounded-r-md sm:text-sm border-gray-300' %>
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
+            <div>
+              <label class="block text-sm font-medium text-gray-700">
+                Photo
+              </label>
+              <div class="mt-1 flex items-center">
+                <span class="inline-block h-12 w-12 rounded-full overflow-hidden bg-gray-100">
+                  <svg class="h-full w-full text-gray-300" fill="currentColor" viewBox="0 0 24 24">
+                    <path d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z" />
+                  </svg>
+                </span>
+                <button type="button" class="ml-5 bg-white py-2 px-3 border border-gray-300 rounded-md shadow-sm text-sm leading-4 font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                  Change
+                </button>
+              </div>
+            </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+            <div>
+              <label class="block text-sm font-medium text-gray-700">
+                Cover photo
+              </label>
+              <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
+                <div class="space-y-1 text-center">
+                  <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                    <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg>
+                  <div class="flex text-sm text-gray-600">
+                    <label for="file-upload" class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
+                      <span>Upload a file</span>
+                      <input id="file-upload" name="file-upload" type="file" class="sr-only">
+                    </label>
+                    <p class="pl-1">or drag and drop</p>
+                  </div>
+                  <p class="text-xs text-gray-500">
+                    PNG, JPG, GIF up to 10MB
+                  </p>
+                </div>
+              </div>
+<!--              <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">-->
+<!--                <button type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">-->
+<!--                  Save-->
+<!--                </button>-->
+<!--              </div>-->
+            </div>
+          </div>
+        </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
+        <div class="hidden sm:block" aria-hidden="true">
+          <div class="py-5">
+            <div class="border-t border-gray-200"></div>
+          </div>
+        </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
+        <div class="shadow sm:rounded-md sm:overflow-hidden">
+          <div class="px-4 py-5 bg-white space-y-6 sm:p-6">
+            <div class="grid grid-cols-6 gap-6">
+              <div class="col-span-6 sm:col-span-3">
+                <%= f.label :first_name, "First Name", class: 'block text-sm font-medium text-gray-700'%>
+                <%= f.text_field :first_name, class: 'mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md'%>
+              </div>
+              <div class="col-span-6 sm:col-span-3">
+                <%= f.label :last_name, "Last Name", class: 'block text-sm font-medium text-gray-700'%>
+                <%= f.text_field :last_name, class: 'mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md'%>
+              </div>
+              <div class="col-span-6 sm:col-span-3">
+                <%= f.label :username, "Username", class: 'block text-sm font-medium text-gray-700'%>
+                <%= f.text_field :username, class: 'mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md'%>
+              </div>
+              <div class="col-span-6 sm:col-span-3">
+                <%= f.label :email, "Email address", class: 'block text-sm font-medium text-gray-700'%>
+                <%= f.email_field :email, class: 'mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md'%>
+              </div>
+<!--              <div class="col-span-6 sm:col-span-3">-->
+                <%#= f.label :password, "Password", class: 'block text-sm font-medium text-gray-700'%>
+<!--                <i>(leave blank if you don't want to change)</i><br>-->
+                <%#= f.password_field :username, class: 'mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', autocomplete: 'new-password'%>
+                <%# if @minimum_password_length %>
+<!--                  <br />-->
+<!--                  <em><%#= @minimum_password_length %> characters minimum</em>-->
+                <%# end %>
+<!--              </div>-->
+<!--              <div class="col-span-6 sm:col-span-3">-->
+                <%#= f.label :email, "Email address", class: 'block text-sm font-medium text-gray-700'%>
+                <%#= f.email_field :email, class: 'mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md'%>
+<!--              </div>-->
+            </div>
+            <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
+<!--              <button-->
+<!--                onClick={console.log('test')}-->
+<!--                class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-red-500 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">-->
+<!--                Update your password-->
+<!--              </button>-->
+              <%= f.submit "Update", class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
 
-<h3>Cancel my account</h3>
+            </div>
+          </div>
+        </div>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+        <%# if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+<!--          <div>Currently waiting confirmation for: <%#= resource.unconfirmed_email %></div>-->
+        <%# end %>
 
-<%= link_to "Back", :back %>
+<!--        <div class="field">-->
+<!--          <%#= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />-->
+          <%#= f.password_field :password, autocomplete: "new-password" %>
+          <%# if @minimum_password_length %>
+<!--            <br />-->
+<!--            <em><%#= @minimum_password_length %> characters minimum</em>-->
+          <%# end %>
+<!--        </div>-->
+
+<!--        <div class="field">-->
+<!--          <%#= f.label :password_confirmation %><br />-->
+          <%#= f.password_field :password_confirmation, autocomplete: "new-password" %>
+<!--        </div>-->
+
+<!--        <div class="field">-->
+<!--          <%#= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />-->
+          <%#= f.password_field :current_password, autocomplete: "current-password" %>
+<!--        </div>-->
+
+
+      <% end %>
+
+<!--      <p>Unhappy? <%#= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>-->
+
+<!--      <div class="w-full flex-none md:w-auto md:pl-6 mt-1 md:mt-0 ml-auto text-teal-600 text-sm font-medium">-->
+<!--        <a class="hover:text-teal-800">-->
+          <%#= link_to "Back", :back %>
+<!--        </a>-->
+<!--      </div>-->
+
+    </div>
+</div>
