--- a/app/views/layouts/session.html.erb
+++ b/app/views/layouts/session.html.erb
@@ -10,16 +10,20 @@
   <%= csp_meta_tag %>
 
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%#= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'tailwind'%>
+  <%= stylesheet_link_tag 'inter-font' %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
 </head>
 <body>
   <h1 class="hidden">
     <%= content_for(:page_title) %>
   </h1>
 
+  <%= render 'layouts/shared/navigation' %>
   <main class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
-    <div class="max-w-md w-full space-y-8">
+    <div >
       <%= render 'layouts/shared/alert' %>
       <%= yield %>
     </div>
